--- a/config.yaml
+++ b/config.yaml
@@ -35,17 +35,21 @@ rl_hyperparameters:
     default: 0.2
     min: 0.1
     max: 0.3
-  max_action: 1.0 # Maximum absolute value for actions (e.g., for scaling tanh output)
-  state_dim: 4 # Dimension of the observation space (e.g., [avg_chain_len, avg_crosslink_density, avg_scission_density, laplacian_l2])
-  action_dim: 1 # Dimension of the action space (e.g., change in dose rate)
+  max_action: 1.0
+  state_dim: 2
+  action_dim: 2
+  # DSAC parameters
+  num_atoms: 51
+  v_min: -100.0
+  v_max: 0.0
   network_architecture:
-    actor: [256, 256]  # Hidden layers
-    critic: [256, 256] # Hidden layers
+    actor: [256, 256]
+    critic: [256, 256]
   # Optuna settings
   enable_optuna: true
   optuna_trials: 100
-  episodes: 1000 # Number of episodes per trial
-  checkpoint_frequency: 50 # Save agent state every X episodes
+  episodes: 1000
+  checkpoint_frequency: 50
 
 # --- 4. Physics Parameters: Constants for the simulation model ---
 physics_parameters:
