ci: Add step to clean pycache before running tests

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,6 +23,11 @@ jobs:
         pip install -r requirements.txt
         pip install pytest
 
+    - name: Clean Python cache
+      run: |
+        find . -type d -name "__pycache__" -exec rm -r {} +
+        find . -type f -name "*.pyc" -delete
+
     - name: Run tests
       run: |
         PYTHONPATH=$(pwd) pytest
