refactor: Implement code review suggestions
- Refactor main.py to use argparse, logging, and load script paths from config.yaml.
- Add script_paths section to config.yaml.
- Update requirements.txt with gymnasium and pyyaml.
- Refactor polymer_env.py to use gymnasium API, load experimental data from JSON, and improve error handling.
- Create experimental_data.json to store ground-truth data.
- Clarify and streamline the distributional critic update in sac_agent.py.

--- a/config.yaml
+++ b/config.yaml
@@ -74,3 +74,10 @@ output_paths:
   database_path: "results/simulation_data.db"
   plot_path: "results/plots/"
   model_path: "results/models/"
+
+# --- 6. Script Paths: Locations of executable scripts ---
+script_paths:
+  md_setup: "scripts/setup_md_system.py"
+  symbolic_regression: "scripts/discover_scission_model.py"
+  reactive_md: "scripts/run_reactive_md.py"
+  rl_fine_tuning: "fine_tune_model.py"
