feat: Add PDB fixing script and update configurations
- Adds 'fix_pdb.py' to correct PDB file issues.
- Introduces 'pe.xml' for system configuration.
- Updates 'config.yaml', 'requirements.txt', and 'install_dependencies.sh'.
- Modifies 'main.py', 'run_tests.sh', and 'scripts/setup_md_system.py'.
- Improves '.gitignore' to exclude 'tests_out/' and 'slurm_output/'.
- Removes tracked '__pycache__' files.

--- a/config.yaml
+++ b/config.yaml
@@ -77,6 +77,7 @@ output_paths:
 
 # --- 6. Script Paths: Locations of executable scripts ---
 script_paths:
+  pdb_input_path: "data/polyethylene_chain.pdb"
   md_setup: "scripts/setup_md_system.py"
   symbolic_regression: "scripts/discover_scission_model.py"
   reactive_md: "scripts/run_reactive_md.py"
