--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,6 +17,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install LAMMPS
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y lammps
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
