Refactor: Improve code quality and consistency across project
- Removed obsolete interactive_plotting.py from root.
- Consolidated env.reset() calls and initial_dose_rate logging in train.py.
- Improved MockTrial to handle various config structures for hyperparameters.
- Removed unused attributes in get_simulation_data_df in polymer_env.py.
- Added NotImplementedError to _run_lammps_simulation in polymer_env.py.
- Integrated config.yaml for LAMMPS parameters in setup_md_system.py and run_reactive_md.py.
- Replaced print statements with logging in various scripts.
- Fixed gamma and tau access in sac_agent.py.
- Corrected target_entropy calculation in sac_agent.py.
- Ensured db_path consistency and proper log_simulation_data parameters in fine_tune_model.py.
- Updated fine_tune_model.py to use episodes from config.yaml and log final metadata correctly.

--- a/config.yaml
+++ b/config.yaml
@@ -77,6 +77,17 @@ lammps_parameters:
   input_script_path: "data/pe_system.in"
   log_path: "data/pe_system.log"
   executable_path: "lammps" # Assumes lammps is in the system PATH
+  temp: 300.0
+  temp_damping: 100.0
+  timestep: 1.0
+  run_steps: 10000
+
+# --- 5.1. LAMMPS Force Field Parameters ---
+lammps_force_field_parameters:
+  pair_style: "lj/cut 2.5"
+  pair_coeff: "1 1 1.0 1.0 2.5"
+  bond_style: "harmonic"
+  bond_coeff: "1 100.0 1.54"
 
 # --- 6. Output Paths: Where to save results ---
 output_paths:
