--- a/data/pe_system.in
+++ b/data/pe_system.in
@@ -1,7 +1,7 @@
 # Polyethylene simulation input script
 units          real
 atom_style     full
-read_data      data\pe_system.data
+read_data      data/pe_system.data
 
 # Define force field parameters
 pair_style     lj/cut 2.5
